<resources>
    <string name="app_name">Reminder</string>
    <string name="action_add_reminder">Add</string>
    <string name="action_save_reminder">Save</string>
    <string name="action_update_reminder">Update</string>
    <string name="action_delete_reminder">Delete</string>
    <string name="action_about_reminder">About</string>

    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">Repetition Interval </string>
    <string name="repeat_type">Type of Repetitions</string>

    <string name="channel_id">Reminder00</string>
    <string name="channel_name">Reminder Notification</string>
    <string name="channel_description">This is a reminder notification.</string>

    <string name="about">"The reminder is a very simple to-do list app. You can set reminders and then the app reminds you when it’s time. The app has a robust, but shortlist of features. You can even set minutes wise, hourly, daily, weekly, and monthly reminders for things like drinking water. The app isn’t as complex as the big names in this space. However, it’s one of the best simple reminder apps for personal use."</string>
</resources>
