<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ReminderActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/reminder_title"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true">

                <ImageView
                    android:id="@+id/reminder_title_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="32dp"
                    android:src="@drawable/reminder_title_icon" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/reminder_title_icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/reminder_title_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title"
                        android:textColor="@color/abc_primary_text_material_dark"
                        android:textSize="15dp" />

                    <EditText
                        android:id="@+id/reminder_title_set"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/abc_secondary_text_material_dark"
                        android:textSize="15dp" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/reminder_date"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:onClick="setDate">

                <ImageView
                    android:id="@+id/reminder_date_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="32dp"
                    android:src="@drawable/reminder_date_icon" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/reminder_date_icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/reminder_date_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textColor="@color/abc_primary_text_material_dark"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/reminder_date_set"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/abc_secondary_text_material_dark"
                        android:textSize="15dp" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/reminder_time"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:onClick="setTime">

                <ImageView
                    android:id="@+id/reminder_time_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="32dp"
                    android:src="@drawable/reminder_time_icon" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/reminder_time_icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/reminder_time_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:textColor="@color/abc_primary_text_material_dark"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/reminder_time_set"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/abc_secondary_text_material_dark"
                        android:textSize="15dp" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/reminder_repeat"
                android:layout_width="match_parent"
                android:layout_height="72dp">

                <ImageView
                    android:id="@+id/reminder_repeat_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="32dp"
                    android:src="@drawable/reminder_repeat_icon" />

                <LinearLayout
                    android:id="@+id/reminder_repeat_ll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/reminder_repeat_icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/reminder_repeat_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat"
                        android:textColor="@color/abc_primary_text_material_dark"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/reminder_repeat_set"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/abc_secondary_text_material_dark"
                        android:textSize="15dp" />

                </LinearLayout>

                <Switch
                    android:id="@+id/reminder_repeat_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="16dp"
                    android:checked="true"
                    android:onClick="onSwitchRepeat"
                    android:textOff="Off"
                    android:textOn="On" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/reminder_repeat_interval"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:onClick="setRepeatNo">

                <ImageView
                    android:id="@+id/reminder_repeat_interval_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="32dp"
                    android:src="@drawable/reminder_repeat_interval_icon" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/reminder_repeat_interval_icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/reminder_repeat_interval_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat_no"
                        android:textColor="@color/abc_primary_text_material_dark"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/reminder_repeat_interval_set"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/abc_secondary_text_material_dark"
                        android:textSize="15dp" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/reminder_repeat_type"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:onClick="selectRepeatType">

                <ImageView
                    android:id="@+id/reminder_repeat_type_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="32dp"
                    android:src="@drawable/reminder_repeat_type_icon" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/reminder_repeat_type_icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/reminder_repeat_type_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat_type"
                        android:textColor="@color/abc_primary_text_material_dark"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/reminder_repeat_type_set"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/abc_secondary_text_material_dark"
                        android:textSize="15dp" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>